[package]
name = "optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
egui_extras = { version = "0.20.0", default-features = false }
sysinfo = { version = "0.27.1", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
egui = { version = "0.20.1", default-features = false, features = [
	"persistence",
] }
eframe = "0.20.1"
serde_json = "1.0.91"
serde = "1.0.152"

[profile.release]
opt-level = 3
debug = 0
strip = "debuginfo"
lto = true
incremental = true
